--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="description" content="This is my portfolio site.">
     <meta name="keyword" content="bolt, bootstrap, portfolio">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="https://kit.fontawesome.com/ec112c5cac.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
@@ -16,7 +17,7 @@
     <header class="header">
       <div class="inner header-inner clearfix">
         <i class="float-left fas fa-bolt header_img"></i>
-        <a href="" class="a float-left header-contact_link">Contact</a>
+        <a href="" class="float-right header-contact_link">Contact</a>
       </div>
     </header>
 
@@ -26,67 +27,67 @@
         <p class="subtheme">FREE BOOTSTRAP THEMES</p>
       </div>
 
-      <section class="section-top">
-        <div class="inner section-top-inner clearfix">
-          <div class="float-left section-top_img-block">
+      <section class="what-block">
+        <div class="inner what-block-inner clearfix">
+          <div class="float-left iphone_img-block">
             <img src="img/iphone.png" alt="iPhone">
           </div>
-          <div class="float-left section_text">
-            <h2 class="section-top_text-top">WHAT WE CAN DO?</h2>
-            <p class="section-top_text-bottom">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          <div class="float-right">
+            <h2 class="what_text-top font-raleway">WHAT WE CAN DO?</h2>
+            <p class="what_text-bottom">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
           </div>
         </div>
       </section>
 
-      <article class="article">
-        <div class="inner article-inner">
-          <h2 class="article_text-top">OUR LATEST WORK</h2>
-          <div class="article_contents-block clearfix">
-            <img class="float-left article_contents_img" src="./img/01.jpg">
-            <img class="float-left article_contents_img" src="./img/02.jpg">
-            <img class="float-left article_contents_img" src="./img/03.jpg">
-            <img class="float-left article_contents_img margin-bottom0" src="./img/04.jpg">
-            <img class="float-left article_contents_img margin-bottom0" src="./img/05.jpg">
-            <img class="float-left article_contents_img margin-bottom0" src="./img/06.jpg">
+      <article class="ourwork-block">
+        <div class="inner ourwork-inner">
+          <h2 class="ourwork_text-top font-raleway">OUR LATEST WORK</h2>
+          <div class="ourwork_contents-block clearfix">
+            <a href="" class="float-left ourwork_contents_img"><img src="./img/01.jpg"></a>
+            <a href="" class="float-left ourwork_contents_img"><img src="./img/02.jpg"></a>
+            <a href="" class="float-left ourwork_contents_img"><img src="./img/03.jpg"></a>
+            <a href="" class="float-left ourwork_contents_img"><img src="./img/04.jpg"></a>
+            <a href="" class="float-left ourwork_contents_img"><img src="./img/05.jpg"></a>
+            <a href="" class="float-left ourwork_contents_img"><img src="./img/06.jpg"></a>
           </div>
-          <div class="article-bottom-block clearfix">
-            <p class="float-left article-bottom_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-            <a href="" class="a float-left article-bottom_link">Email Me!</a>
+          <div class="ourwork-bottom-block clearfix">
+            <p class="float-left ourwork-bottom_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+            <a href="" class="float-left ourwork-bottom_link">Email Me!</a>
           </div>
         </div>
       </article>
 
-        <section class="section-bottom">
-          <div class="inner section-bottom-inner">
-            <h2 class="section-bottom_text">OUR SKILLS</h2>
-            <div class="section-bottom_contents clearfix">
-              <div class="float-left circle">
-                  <img src="./img/circle_01.png">
-                  <p class="section-bottom_contents_text">javaScript</p>
-              </div>
-              <div class="float-left circle">
-                <img src="./img/circle_02.png">
-                <p class="section-bottom_contents_text">Bootstrap</p>
-              </div>
-              <div class="float-left circle">
-                <img src="./img/circle_03.png">
-                <p class="section-bottom_contents_text">Wordpress</p>
-              </div>
-              <div class="float-left circle">
-                <img class="float-left circle photoshop" src="./img/circle_04.png">
-                <p class="section-bottom_contents_text">Photoshop</p>
-              </div>
+      <section class="ourskill-bottom">
+        <div class="inner ourskill-bottom-inner">
+          <h2 class="ourskill-bottom_text font-raleway">OUR SKILLS</h2>
+          <div class="ourskill-bottom_contents clearfix">
+            <div class="float-left circle">
+              <img class="circle_img" src="./img/circle_01.png">
+              <p class="ourskill-bottom_contents_text">javaScript</p>
+            </div>
+            <div class="float-left circle">
+              <img class="circle_img" src="./img/circle_02.png">
+              <p class="ourskill-bottom_contents_text">Bootstrap</p>
+            </div>
+            <div class="float-left circle">
+              <img class="circle_img" src="./img/circle_03.png">
+              <p class="ourskill-bottom_contents_text">Wordpress</p>
+            </div>
+            <div class="float-left circle">
+              <img class="circle_img" src="./img/circle_04.png">
+              <p class="ourskill-bottom_contents_text">Photoshop</p>
             </div>
           </div>
-        </section>
-        <nav class="nav">
-          <div class="inner nav-inner">
-            <a href="" class="a nav_sns_img"><i class="fab fa-facebook-f"></i></a>
-            <a href="" class="a nav_sns_img"><i class="fab fa-facebook-f"></i></a>
-            <a href="" class="a nav_sns_img"><i class="fab fa-twitter"></i></a>
-            <a href="" class="a nav_sns_img"><i class="fab fa-envelope"></i></a>
-          </div>
-        </nav>
+        </div>
+      </section>
+      <nav class="nav">
+        <div class="inner nav-inner">
+          <a href="" class="nav_sns_img"><i class="fab fa-facebook-f"></i></a>
+          <a href="" class="nav_sns_img"><i class="fas fa-basketball-ball"></i></a>
+          <a href="" class="nav_sns_img"><i class="fab fa-twitter"></i></a>
+          <a href="" class="nav_sns_img"><i class="fas fa-envelope"></i></a>
+        </div>
+      </nav>
     </main>
 
     <footer class="footer">
