レスポンシブデザイン

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="description" content="This is my portfolio site.">
     <meta name="keyword" content="bolt, bootstrap, portfolio">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1"> -->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
     <script src="https://kit.fontawesome.com/ec112c5cac.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
@@ -17,6 +18,11 @@
     <header class="header">
       <div class="inner header-inner clearfix">
         <i class="float-left fas fa-bolt header_img"></i>
+        <a href="" class="menu">
+            <span class="menu_line menu_line1"></span>
+            <span class="menu_line menu_line2"></span>
+            <span class="menu_line menu_line3"></span>
+        </a> 
         <a href="" class="float-right header-contact_link">Contact</a>
       </div>
     </header>
@@ -29,10 +35,10 @@
 
       <section class="what-block">
         <div class="inner what-block-inner clearfix">
-          <div class="float-left iphone_img-block">
+          <div class="float-left tab-sp-iphone-img">
             <img src="img/iphone.png" alt="iPhone">
           </div>
-          <div class="float-right">
+          <div class="float-right what_text">
             <h2 class="what_text-top font-raleway">WHAT WE CAN DO?</h2>
             <p class="what_text-bottom">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
           </div>
