レスポンシブデザイン、レビュー前修正

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <div class="inner header-inner clearfix">
         <i class="float-left fas fa-bolt header_img"></i>
         <a href="" class="menu">
-            <span class="menu_line menu_line1"></span>
-            <span class="menu_line menu_line2"></span>
-            <span class="menu_line menu_line3"></span>
+          <span class="menu_line menu_line1"></span>
+          <span class="menu_line menu_line2"></span>
+          <span class="menu_line menu_line3"></span>
         </a> 
         <a href="" class="float-right header-contact_link">Contact</a>
       </div>
@@ -67,19 +67,19 @@
         <div class="inner ourskill-bottom-inner">
           <h2 class="ourskill-bottom_text font-raleway">OUR SKILLS</h2>
           <div class="ourskill-bottom_contents clearfix">
-            <div class="float-left circle">
+            <div class="circle">
               <img class="circle_img" src="./img/circle_01.png">
               <p class="ourskill-bottom_contents_text">javaScript</p>
             </div>
-            <div class="float-left circle">
+            <div class="circle">
               <img class="circle_img" src="./img/circle_02.png">
               <p class="ourskill-bottom_contents_text">Bootstrap</p>
             </div>
-            <div class="float-left circle">
+            <div class="circle">
               <img class="circle_img" src="./img/circle_03.png">
               <p class="ourskill-bottom_contents_text">Wordpress</p>
             </div>
-            <div class="float-left circle">
+            <div class="circle">
               <img class="circle_img" src="./img/circle_04.png">
               <p class="ourskill-bottom_contents_text">Photoshop</p>
             </div>
