--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <nav class="nav">
         <div class="inner nav-inner">
           <a href="" class="nav_sns_img"><i class="fab fa-facebook-f"></i></a>
-          <a href="" class="nav_sns_img"><i class="fas fa-basketball-ball"></i></a>
+          <a href="" class="nav_sns_img"><i class="fab fa-dribbble"></i></a>
           <a href="" class="nav_sns_img"><i class="fab fa-twitter"></i></a>
           <a href="" class="nav_sns_img"><i class="fas fa-envelope"></i></a>
         </div>
