レビュー後修正

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <main class="main">
       <div class="inner theme-inner">
-        <h1 class="theme">Bolt Theme</h1>
+        <h1 class="theme font-raleway">Bolt Theme</h1>
         <p class="subtheme">FREE BOOTSTRAP THEMES</p>
       </div>
 
